docs: improve documentation quality, accuracy, and completeness
- Add missing docs to mint.json navigation (kitchen-sink, claude-log-format)
- Fix broken links (state.mdx duplicate, multi-phase-review.mdx)
- Fix .mdx extension in links (codex, gemini, use-command)
- Remove duplicate example in if.mdx
- Update multi-phase-review.mdx to use SQLite state pattern instead of useState
- Add missing component docs: each.mdx, end.mdx
- Create comprehensive improvement plan in issues/docs-improvements.md

--- a/docs/api-reference/state.mdx
+++ b/docs/api-reference/state.mdx
@@ -198,9 +198,9 @@ interface Transition {
 
 <CardGroup cols={2}>
   <Card title="Database Persistence" icon="database" href="/concepts/database-persistence">
-    State management concepts
+    State persistence concepts
   </Card>
-  <Card title="Database Persistence" icon="hard-drive" href="/concepts/database-persistence">
-    Persistence overview
+  <Card title="Database API" icon="server" href="/api-reference/database">
+    Database overview
   </Card>
 </CardGroup>
