--- a/docs/api-reference/use-command.mdx
+++ b/docs/api-reference/use-command.mdx
@@ -581,7 +581,7 @@ function CommandTerminal() {
   <Card
     title="Command Component"
     icon="terminal"
-    href="/components/command.mdx"
+    href="/components/command"
   >
     Declarative command execution - wraps useCommand internally
   </Card>
@@ -589,7 +589,7 @@ function CommandTerminal() {
   <Card
     title="Worktree Component"
     icon="code-branch"
-    href="/components/worktree.mdx"
+    href="/components/worktree"
   >
     Git worktree isolation - useCommand respects worktree context
   </Card>
@@ -597,7 +597,7 @@ function CommandTerminal() {
   <Card
     title="Phase Component"
     icon="layer-group"
-    href="/components/phase.mdx"
+    href="/components/phase"
   >
     Sequential execution - natural place to use useCommand
   </Card>
