--- a/docs/components/codex.mdx
+++ b/docs/components/codex.mdx
@@ -487,7 +487,7 @@ const bugAnalysisSchema = z.object({
   <Card
     title="FallbackAgent Component"
     icon="shield-halved"
-    href="/components/fallback-agent.mdx"
+    href="/components/fallback-agent"
   >
     Multi-provider failover - Codex used as fallback option
   </Card>
@@ -495,7 +495,7 @@ const bugAnalysisSchema = z.object({
   <Card
     title="Claude Component"
     icon="robot"
-    href="/components/claude.mdx"
+    href="/components/claude"
   >
     Primary agent - Codex provides alternative/fallback
   </Card>
@@ -503,7 +503,7 @@ const bugAnalysisSchema = z.object({
   <Card
     title="Gemini Component"
     icon="stars"
-    href="/components/gemini.mdx"
+    href="/components/gemini"
   >
     Google Gemini agent - another fallback option
   </Card>
