--- a/docs/components/gemini.mdx
+++ b/docs/components/gemini.mdx
@@ -539,7 +539,7 @@ Text and images combined in single request.
   <Card
     title="FallbackAgent Component"
     icon="shield-halved"
-    href="/components/fallback-agent.mdx"
+    href="/components/fallback-agent"
   >
     Multi-provider failover - Gemini used for redundancy
   </Card>
@@ -547,7 +547,7 @@ Text and images combined in single request.
   <Card
     title="Claude Component"
     icon="robot"
-    href="/components/claude.mdx"
+    href="/components/claude"
   >
     Primary agent - Gemini provides alternative
   </Card>
@@ -555,7 +555,7 @@ Text and images combined in single request.
   <Card
     title="Codex Component"
     icon="code"
-    href="/components/codex.mdx"
+    href="/components/codex"
   >
     OpenAI agent - another fallback option
   </Card>
