--- a/docs/api-reference/artifacts.mdx
+++ b/docs/api-reference/artifacts.mdx
@@ -10,7 +10,7 @@ The `db.artifacts` module tracks files and outputs generated during workflow exe
 ## Overview
 
 ```tsx
-import { createSmithersDB } from "smithers-orchestrator/db";
+import { createSmithersDB } from "smithers-orchestrator";
 
 const db = await createSmithersDB({ path: ".smithers/my-workflow" });
 
