--- a/docs/api-reference/database.mdx
+++ b/docs/api-reference/database.mdx
@@ -10,7 +10,7 @@ The Smithers database provides persistent storage using SQLite (via reactive-sql
 ## Creating a Database
 
 ```tsx
-import { createSmithersDB } from "smithers-orchestrator/db";
+import { createSmithersDB } from "smithers-orchestrator";
 
 const db = await createSmithersDB({
   path: ".smithers/my-workflow"
