--- a/docs/api-reference/human.mdx
+++ b/docs/api-reference/human.mdx
@@ -10,7 +10,7 @@ The `db.human` module handles requests for human input, confirmation, or approva
 ## Overview
 
 ```tsx
-import { createSmithersDB } from "smithers-orchestrator/db";
+import { createSmithersDB } from "smithers-orchestrator";
 
 const db = await createSmithersDB({ path: ".smithers/my-workflow" });
 
