--- a/docs/api-reference/phases.mdx
+++ b/docs/api-reference/phases.mdx
@@ -10,7 +10,7 @@ The `db.phases` module tracks workflow phases. Phases group related steps and pr
 ## Overview
 
 ```tsx
-import { createSmithersDB } from "smithers-orchestrator/db";
+import { createSmithersDB } from "smithers-orchestrator";
 
 const db = await createSmithersDB({ path: ".smithers/my-workflow" });
 
