--- a/docs/api-reference/steps.mdx
+++ b/docs/api-reference/steps.mdx
@@ -10,7 +10,7 @@ The `db.steps` module tracks individual steps within workflow phases. Steps repr
 ## Overview
 
 ```tsx
-import { createSmithersDB } from "smithers-orchestrator/db";
+import { createSmithersDB } from "smithers-orchestrator";
 
 const db = await createSmithersDB({ path: ".smithers/my-workflow" });
 
