--- a/docs/api-reference/tasks.mdx
+++ b/docs/api-reference/tasks.mdx
@@ -10,7 +10,7 @@ The `db.tasks` module provides task tracking for Ralph iteration management. It 
 ## Overview
 
 ```tsx
-import { createSmithersDB } from "smithers-orchestrator/db";
+import { createSmithersDB } from "smithers-orchestrator";
 
 const db = await createSmithersDB({ path: ".smithers/my-workflow" });
 
