--- a/docs/api-reference/tools.mdx
+++ b/docs/api-reference/tools.mdx
@@ -10,7 +10,7 @@ The `db.tools` module tracks tool calls made by agents. This provides observabil
 ## Overview
 
 ```tsx
-import { createSmithersDB } from "smithers-orchestrator/db";
+import { createSmithersDB } from "smithers-orchestrator";
 
 const db = await createSmithersDB({ path: ".smithers/my-workflow" });
 
