--- a/docs/concepts/database-persistence.mdx
+++ b/docs/concepts/database-persistence.mdx
@@ -15,7 +15,7 @@ Smithers uses **SQLite** (via reactive-sqlite) to persist all workflow state. Th
 ## Creating a Database
 
 ```tsx
-import { createSmithersDB } from "smithers-orchestrator/db";
+import { createSmithersDB } from "smithers-orchestrator";
 
 // Create a database at a specific path
 // .smithers/my-workflow is the default location we recommend for workflow databases
