--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -1,38 +1,89 @@
 ---
 title: Introduction
-description: Declarative JSX framework for building AI agent orchestration workflows
+description: Let your agent write agents - React-style orchestration for durable Ralph loops
 ---
 
 # Welcome to Smithers
 
-Smithers is a **declarative JSX framework** for building AI agent orchestration workflows. Built with React, it lets you write agent workflows as composable JSX components with persistent state across sessions.
+**Let your agent write agents.**
+
+Smithers is React-style orchestration your coding agent can generate, then run safely as durable Ralph loops. Built for long-running "night shift" sessions with persistence, history, and restart-safe execution.
+
+```
+┌─────────────────────────────────────────────────────────────────────────────┐
+│  React tree  ──▶  Smithers executor  ──▶  Tools + Claude  ──▶  SQLite DB   │
+│                                                                             │
+│  "React syntax, non-UI renderer"                                            │
+└─────────────────────────────────────────────────────────────────────────────┘
+```
 
 ## Why Smithers?
 
-- **Write agent workflows as JSX** - Declarative composition is easier to reason about than imperative chains
-- **Let Claude Code write the orchestration** - Describe what you want, and your agent builds the workflow
-- **Persist state across sessions** - Pick up where you left off, even days later
-- **Mix short scripts with long-running workflows** - Same syntax for a quick task or a week-long project
-- **Full observability** - Database logging and reports show exactly what your agents are doing
-- **Reactive primitives** - React mean your workflows respond to state changes automatically
-- **Version controlled workflows** - Workflows are just TypeScript files
+### The Problem
+
+Simple Ralph loops work great for basic iteration. But as workflows grow complex:
+- Multi-phase orchestration becomes hard to manage
+- Parallel agents need coordination
+- Plans live in prompts, not reviewable code
+- Manual orchestration doesn't scale
+
+### The Solution
+
+- **Agent-native syntax** - Easy for Claude Code to generate, easy for humans to review
+- **Sophisticated Ralph loops** - Multi-phase, parallel agents, conditional branches
+- **Composable components** - Build complex workflows from simple pieces
+- **One syntax for humans and agents** - You can read it, Claude can generate it, Git can version it
 
 <CardGroup cols={2}>
   <Card title="Quick Start" icon="rocket" href="/quickstart">
-    Get up and running with your first agent in minutes
+    Get up and running in 2 minutes
   </Card>
-  <Card title="Core Concepts" icon="lightbulb" href="/concepts/ralph-wiggum-loop">
-    Understand the execution model and mental framework
+  <Card title="Durable Ralphing" icon="rotate" href="/concepts/ralph-wiggum-loop">
+    Understand the execution model
   </Card>
   <Card title="Components" icon="cube" href="/components/claude">
-    Explore the component API reference
+    Explore the component API
   </Card>
   <Card title="Examples" icon="code" href="/examples/hello-world">
-    Learn from real-world agent examples
+    Copy-paste starter workflows
   </Card>
 </CardGroup>
 
 ## Key Features
+
+### Sophisticated Ralph Loops
+
+Smithers lets you build complex Ralph loops with structure:
+
+```tsx
+<SmithersProvider db={db} executionId={executionId} maxIterations={50}>
+  <Phase name="Implement">
+    <Parallel>
+      <Claude model="sonnet">Fix auth module</Claude>
+      <Claude model="sonnet">Fix database module</Claude>
+    </Parallel>
+  </Phase>
+
+  <Phase name="Verify">
+    <Claude
+      model="sonnet"
+      onFinished={(result) => {
+        if (result.output.includes("All tests pass")) {
+          db.state.set("complete", "true");
+        }
+      }}
+    >
+      Run tests. If any fail, go back to Implement phase.
+    </Claude>
+  </Phase>
+</SmithersProvider>
+```
+
+**What Smithers adds:**
+- Multi-phase workflows with conditional transitions
+- Parallel agent execution with coordination
+- Composable, reusable components
+- Optional persistence for long-running workflows
 
 ### Claude Component
 
@@ -43,24 +94,10 @@ The core agent component that executes Claude with full tool access:
   model="sonnet"           // opus | sonnet | haiku
   maxTurns={10}            // Limit agentic loops
   permissionMode="acceptEdits"  // Auto-accept file edits
-  systemPrompt="You are a senior engineer..."
-  allowedTools={["Read", "Edit", "Bash"]}
   onFinished={(result) => handleResult(result)}
 >
   Your prompt here
 </Claude>
-```
-
-### Ralph Loop Controller
-
-Named after Ralph Wiggum's "I'm in danger" catchphrase - controls iterative loops that could run away:
-
-```tsx
-<Ralph maxIterations={10} onMaxIterations={() => console.log("I'm in danger!")}>
-  <Claude onFinished={() => { /* state change triggers next iteration */ }}>
-    Keep improving until tests pass.
-  </Claude>
-</Ralph>
 ```
 
 ### Structured Output with Zod
@@ -79,19 +116,22 @@ const UserSchema = z.object({
 // result.structured: { name: string, email: string }
 ```
 
-### Database State Persistence
+### Database Persistence (Flight Recorder)
 
-All state is saved in a SQLite database that survives restarts:
+Every run persists in SQLite - your workflow's audit trail:
 
 ```tsx
-// Set state
+// Set state (survives restarts)
 await db.state.set("phase", "review");
 
-// Get state
-const phase = await db.state.get("phase");
+// Resume incomplete executions
+const incomplete = await db.execution.findIncomplete();
+if (incomplete) {
+  executionId = incomplete.id; // Pick up where you left off
+}
 
-// Query history
-const history = await db.state.history("phase");
+// Query history - see how state evolved
+const history = await db.state.getHistory("phase");
 ```
 
 ### MCP Tool Integration
@@ -109,42 +149,53 @@ Give Claude access to external tools via Model Context Protocol:
 
 ## How It Works
 
-Smithers uses a custom React renderer called the "Ralph Wiggum Loop":
-
-1. **Render**: Your JSX components render using React's rendering
-2. **Execute**: `<Claude>` nodes are executed via Claude Code CLI
-3. **Update**: `onFinished` callbacks update React state
-4. **Re-render**: Signal changes trigger reactive updates to the tree
-5. **Loop**: Back to step 2 until no pending `<Claude>` nodes remain
-6. **Complete**: Execution finishes when all agents are done
-
-This reactive model means your agent's behavior emerges from your component logic - conditionals, state machines, and composition.
-
-## Installation Methods
-
-### Claude Code Plugin (Recommended)
-
-```bash
-# Add the Smithers marketplace
-/plugin marketplace add evmts/smithers
-
-# Install the plugin
-/plugin install smithers@smithers
+```
+┌──────────┐    ┌─────────┐    ┌──────────────────┐
+│  Render  │───▶│ Execute │───▶│ Update State     │
+│   JSX    │    │ Claude  │    │ (onFinished)     │
+└──────────┘    └─────────┘    └──────────────────┘
+     ▲                                   │
+     │                                   │
+     └───────────────────────────────────┘
+              (re-render on state change)
 ```
 
-### npm Package (Programmatic)
+1. **Render**: Your JSX components render
+2. **Execute**: `<Claude>` nodes execute via Claude Code CLI
+3. **Update**: `onFinished` callbacks update state (persisted to SQLite)
+4. **Re-render**: State changes trigger reactive updates
+5. **Loop**: Repeat until no pending agents remain
+
+## Installation
 
 ```bash
 bun add smithers-orchestrator
 ```
 
+## FAQ
+
+### Is this actually React? Do I need to run a UI?
+
+No UI. React is a component model + markup-like syntax. People already use it to render to non-DOM targets (CLI, PDFs, native). Smithers renders to **execution**, not DOM.
+
+### Why not YAML/JSON for workflows?
+
+Because you want:
+- Composition and reuse
+- Version control diffs that make sense
+- Something your coding agent can generate AND you can review like normal code
+
+### How does this relate to Ralphing?
+
+Ralphing is the outer loop (iterate until verification passes). Smithers gives it structure, persistence, and inspectability.
+
 ## Next Steps
 
 <CardGroup cols={2}>
-  <Card title="Quick Start Guide" icon="play" href="/quickstart">
+  <Card title="Quick Start" icon="play" href="/quickstart">
     Create your first Smithers workflow
   </Card>
-  <Card title="Ralph Wiggum Loop" icon="rotate" href="/concepts/ralph-wiggum-loop">
+  <Card title="Durable Ralphing" icon="rotate" href="/concepts/ralph-wiggum-loop">
     Understand the core execution model
   </Card>
 </CardGroup>
