fix: use tsc instead of bun build to share React context
- Sub-modules (JJ, Git, Hooks, MCP) now share SmithersContext with main bundle
- Fixes 'useSmithers must be used within SmithersProvider' error
- tsc preserves relative imports so all modules resolve to same context

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -9,12 +9,21 @@ description: Let your agent write agents - React-style orchestration for durable
 
 Smithers is React-style orchestration your coding agent can generate, then run safely as durable Ralph loops. Built for long-running "night shift" sessions with persistence, history, and restart-safe execution.
 
-```
-┌─────────────────────────────────────────────────────────────────────────────┐
-│  React tree  ──▶  Smithers executor  ──▶  Tools + Claude  ──▶  SQLite DB   │
-│                                                                             │
-│  "React syntax, non-UI renderer"                                            │
-└─────────────────────────────────────────────────────────────────────────────┘
+```tsx
+<SmithersProvider db={db}>
+  <Phase name="Plan">
+    <Claude model="sonnet">Analyze the codebase and create a plan</Claude>
+  </Phase>
+  <Phase name="Execute">
+    <Parallel>
+      <Claude>Implement feature A</Claude>
+      <Claude>Implement feature B</Claude>
+    </Parallel>
+  </Phase>
+  <Phase name="Verify">
+    <Claude>Run tests and fix any failures</Claude>
+  </Phase>
+</SmithersProvider>
 ```
 
 ## Why Smithers?
