--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -9,21 +9,43 @@ description: Let your agent write agents - React-style orchestration for durable
 
 Smithers is React-style orchestration your coding agent can generate, then run safely as durable Ralph loops. Built for long-running "night shift" sessions with persistence, history, and restart-safe execution.
 
-```tsx
-<SmithersProvider db={db}>
-  <Phase name="Plan">
-    <Claude model="sonnet">Analyze the codebase and create a plan</Claude>
-  </Phase>
-  <Phase name="Execute">
-    <Parallel>
-      <Claude>Implement feature A</Claude>
-      <Claude>Implement feature B</Claude>
-    </Parallel>
-  </Phase>
-  <Phase name="Verify">
-    <Claude>Run tests and fix any failures</Claude>
-  </Phase>
-</SmithersProvider>
+```jsx
+import { SmithersProvider, Phase, Claude, Parallel } from 'smithers-orchestrator'
+import { createDb } from 'smithers-orchestrator/db'
+
+function FeatureWorkflow({ featureSpec }) {
+  const db = createDb('.smithers/workflow.db')
+
+  return (
+    <SmithersProvider db={db} maxIterations={20}>
+      <Phase name="Plan">
+        <Claude model="sonnet">
+          Analyze the codebase and create an implementation plan for: {featureSpec}
+        </Claude>
+      </Phase>
+
+      <Phase name="Implement">
+        <Parallel>
+          <Claude model="sonnet">Implement the backend changes from the plan</Claude>
+          <Claude model="sonnet">Implement the frontend changes from the plan</Claude>
+        </Parallel>
+      </Phase>
+
+      <Phase name="Verify">
+        <Claude
+          model="sonnet"
+          onFinished={(result) => {
+            if (result.output.includes('All tests pass')) {
+              db.state.set('status', 'complete')
+            }
+          }}
+        >
+          Run the test suite. If any tests fail, fix them and re-run.
+        </Claude>
+      </Phase>
+    </SmithersProvider>
+  )
+}
 ```
 
 ## Why Smithers?
